--- a/assets/style.css
+++ b/assets/style.css
@@ -18,13 +18,41 @@
 
 }
 
+.dark {
+    background-color: #262525;
+}
+
+.dark main {
+    background-color: #262525;
+}
+
+.dark h1 {
+    color: rgb(255, 255, 255);
+}
+
+.dark .container{
+    background-color: #313639;
+}
+
+.dark .colonne p{
+    color: rgb(255, 255, 255);
+}
+
+.dark footer{
+    color: rgb(255, 255, 255);
+}
+
 body {
     background: #f1f3f5;
-    height: 100vh;
+    font-size: 14px;
 }
 
 header {
-    height:6%;
+    height: 6%;
+}
+
+.header-mobile{
+    display: none;
 }
 
 nav {
@@ -50,11 +78,21 @@ nav ul {
     align-items: center;
 }
 
+a:hover {
+    color: rgb(102, 106, 106);
+    transition: 0.4s ease-in-out;
+}
+
 nav ul li {
     display: inherit;
     cursor: pointer;
 
 }
+
+nav ul li:hover {
+    color: rgb(102, 106, 106);
+}
+
 
 .icon {
     background: #fff;
@@ -121,6 +159,7 @@ h2 span {
     position: absolute;
     bottom: 10px;
     right: 20px;
+    text-align: end;
 }
 
 h2 {
@@ -140,9 +179,9 @@ main {
 .container {
     background-color: #fff;
     border-radius: 15px;
-    margin: 10px 15px 0 15px;
+    margin: 20px 45px 50px 45px;
     padding: 20px;
-    height: 100%;
+    height: 80vh;
     position: relative;
 }
 
@@ -163,26 +202,59 @@ main {
 }
 
 .interfaces {
-    background-image: url(/assets/img/pexels-cottonbro-5474028.jpg);
+    background-image: url(/assets/img/pexels-cottonbro-5474028.jpg), linear-gradient(rgb(66 61 61 / 18%),rgb(0 0 0 / 88%));
+    background-blend-mode: overlay;
     background-size: cover;
     background-position: center;
+    cursor: pointer;
+   
+
+}
+
+.interfaces span{
     color: #F1F3F4;
+    position: absolute;
+    bottom: 5px;
+    right: 5%;
+    text-align: end;
+    font-weight: 600;
 
 }
 
 .logique {
-    background-image: url(/assets/img/pexels-cottonbro-5473957.jpg);
+    background-image: url(/assets/img/pexels-cottonbro-5473957.jpg), linear-gradient(rgb(66 61 61 / 18%),rgb(0 0 0 / 88%));
+    background-blend-mode: overlay;
     background-size: cover;
     background-position: center;
     color: #F1F3F4;
+    cursor: pointer;
+
+}
+
+.logique span{
+    position: absolute;
+    bottom: 5px;
+    right: 5%;
+    text-align: end;
+    font-weight: 600;
 
 }
 
 .data {
-    background-image: url(/assets/img/pexels-mati-mango-5952647.jpg);
+    background-image: url(/assets/img/pexels-mati-mango-5952647.jpg), linear-gradient(rgb(66 61 61 / 18%),rgb(0 0 0 / 88%));
+    background-blend-mode: overlay;
     background-size: cover;
     background-position: center;
     color: #F1F3F4;
+    cursor: pointer;
+}
+.data span{
+    position: absolute;
+    bottom: 5px;
+    right: 5%;
+    text-align: end;
+    font-weight: 600;
+
 }
 
 .block-main {
@@ -196,48 +268,95 @@ main {
 
 .colonne .vignette {
     width: 33%;
+    height: 86%;
     border-radius: 5px;
     margin-top: 25px;
     margin-right: 15px;
+    position: relative;
 }
 
 .colonne-right {
     padding: 18px;
 }
 
-.button{
+.button {
     display: flex;
     flex-wrap: wrap;
 
 }
-.button li{
+
+.button li {
     margin: 10px;
     background-color: #f1f3f5;
     border-radius: 22px;
-    padding: 8px 20px;
+    padding: 4px 20px;
+    cursor: pointer;
 }
 
-.more{
+.more {
     border-style: dashed;
-    
+    padding: 4px 10px !important;
 
 }
+
 footer {
     text-align: center;
-    margin: 30px 0 15px 0;
-
+    margin: -20px 0 24px 0;
 }
 
 /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
-@media screen and (max-width: 500px) {
-    .nav a {
-        float: none;
+@media screen and (min-width:320px) and (max-width:640px){
+    
+    .header-mobile {
         display: block;
+        height: 10px;
+        text-align: center;
+        padding: 10px;
+    }
+
+
+    .logo{
+       display: none;
+    }
+    
+    nav, nav ul {
+        display: block;
+        list-style-type: none;
+        margin-top: 10vh;
+        padding: 0;
+        width: 9%;
+        height: 100%; /* Full height */
+        position: fixed; /* Make it stick, even on scroll */
+        overflow: auto; /* Enable scrolling if the sidenav has too much content */
+
+
+    }
+    .icon-user{
+        background-color: inherit;
+
+    }
+    .icon-user span{
+        display: none;
+        
+        
     }
 
     .block-main {
         display: block;
     }
+
+    .container {
+        height: 100%;
+    }
+
+    .sous-titre {
+        text-align: center;
+    }
+
+    .sous-titre h2 {
+        font-size: 30px;
+    }
+
 
     .colonne {
         width: 100%;
@@ -251,7 +370,14 @@ footer {
         width: 100%;
         height: 200px;
     }
-}
 
-/*display: grid;
-grid-template-columns: 3.25fr 4fr;*/
+    .button li {
+        display: flex;
+        border-radius: 22px;
+        padding: 2px 9px;
+    }
+
+    footer {
+        margin: -28px 0 26px 0;
+    }
+}
