--- a/assets/style.css
+++ b/assets/style.css
@@ -15,9 +15,9 @@
     text-decoration: none;
     list-style: none;
     font-family: 'Montserrat', sans-serif;
-
 }
 
+/* dark mode*/
 .dark {
     background-color: #262525;
 }
@@ -41,6 +41,8 @@
 .dark footer {
     color: rgb(255, 255, 255);
 }
+
+/* end of dark mode*/
 
 body {
     background: #f1f3f5;
@@ -124,7 +126,6 @@ nav ul li:hover {
     padding: 0 1px 0 6px;
     font-weight: 600;
     font-size: 12px;
-
 }
 
 .icon-user img {
@@ -141,18 +142,10 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     margin-left: 10px;
     font-weight: 700;
-
 }
 
 h1 span {
     font-weight: 300;
-}
-
-h2 span {
-    font-weight: 600;
-    margin-left: 10px;
-    margin-right: 10px;
-
 }
 
 .sous-titre {
@@ -165,9 +158,13 @@ h2 span {
 h2 {
     font-weight: 300;
     font-size: 32px;
-
 }
 
+h2 span {
+    font-weight: 600;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
 main {
     display: flex;
@@ -207,8 +204,6 @@ main {
     background-size: cover;
     background-position: center;
     cursor: pointer;
-
-
 }
 
 .interfaces span {
@@ -218,7 +213,6 @@ main {
     right: 5%;
     text-align: end;
     font-weight: 600;
-
 }
 
 .logique {
@@ -228,7 +222,6 @@ main {
     background-position: center;
     color: #F1F3F4;
     cursor: pointer;
-
 }
 
 .logique span {
@@ -237,7 +230,6 @@ main {
     right: 5%;
     text-align: end;
     font-weight: 600;
-
 }
 
 .data {
@@ -255,7 +247,6 @@ main {
     right: 5%;
     text-align: end;
     font-weight: 600;
-
 }
 
 .block-main {
@@ -280,13 +271,13 @@ main {
     padding: 18px;
 }
 
-.button {
+.learning {
     display: flex;
     flex-wrap: wrap;
 
 }
 
-.button li {
+.learning li {
     margin: 10px;
     background-color: #f1f3f5;
     border-radius: 22px;
@@ -305,7 +296,7 @@ footer {
     margin: -20px 0 24px 0;
 }
 
-/* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
+/* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 640 pixels */
 @media screen and (min-width:320px) and (max-width:640px) {
 
     .header-mobile {
@@ -328,24 +319,16 @@ footer {
         padding: 0;
         width: 9%;
         height: 100%;
-        /* Full height */
         position: fixed;
-        /* Make it stick, even on scroll */
         overflow: auto;
-        /* Enable scrolling if the sidenav has too much content */
-
-
     }
 
     .icon-user {
         background-color: inherit;
-
     }
 
     .icon-user span {
         display: none;
-
-
     }
 
     .block-main {
@@ -364,7 +347,6 @@ footer {
         font-size: 30px;
     }
 
-
     .colonne {
         width: 100%;
     }
@@ -378,7 +360,7 @@ footer {
         height: 200px;
     }
 
-    .button li {
+    .learning li {
         display: flex;
         border-radius: 22px;
         padding: 2px 9px;
